# RobotRicochetSolver

./: .gitignore  README.md  Upgrade.txt  auto-install-OpenCV.sh
ApplicationMobile/: corretcion.txt
ApplicationPC/: RicochetRobot.pro  board.cpp  board.h  construct.h  controller.cpp  controller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  observer.h  qressources.qrc  socketconnection.cpp  socketconnection.h  viewboard.cpp  viewboard.h  viewmainmenu.cpp  viewmainmenu.h  viewplateau.cpp  viewplateau.h  viewplateauofficiel.cpp  viewplateauofficiel.h
Serveur/: CommunicationServeurClient.txt  buildRicochetSocketServer.sh
Serveur/Socket/: CMakeLists.txt
Serveur/Socket/JavaSocketClientExample/untitled/src/: Main.java
Serveur/Socket/JavaSocketClientExample/untitled/src/RicochetSocket/: RicochetSocket.java
Serveur/Socket/JavaSocketClientExample/untitled/src/RicochetSocket/Packet/: Packet.java
Serveur/Socket/JavaSocketClientExample/untitled/src/RicochetSocket/Packet/CustomPacket/: ConnectionTestRequestPacket.java  DataPacket.java  PacketDeserializer.java
Serveur/Socket/RicochetSocketsServer/: CMakeLists.txt  config.h  main.cpp
Serveur/Socket/RicochetSocketsServer/Client/: Client.cpp  Client.h
Serveur/Socket/RicochetSocketsServer/Logs/: Logs.h
Serveur/Socket/RicochetSocketsServer/MultipleTypePointer/: MultipleTypePointer.h
Serveur/Socket/RicochetSocketsServer/Server/: Server.cpp  Server.h
Serveur/Socket/RicochetSocketsServer/Socket/: Socket.cpp  Socket.h
Serveur/Socket/RicochetSocketsServer/Socket/Packet/: Packet.cpp  Packet.h  PacketDeserializer.h
Serveur/Socket/RicochetSocketsServer/Socket/Packet/CustomPacket/: ConnectionTestRequestPacket.h  DataPacket.cpp  DataPacket.h
Serveur/Socket/RicochetSocketsServer/archive/: Serveur.h
Serveur/Socket/RicochetSocketsServer/archive/boardBuilder/: board.h
Serveur/Socket/RicochetSocketsServer/archive/boardIsolation/: boardIsolation.cpp  boardIsolation.h
Serveur/Socket/RicochetSocketsServer/archive/clients/: Client.h
Serveur/Socket/RicochetSocketsServer/archive/jpegBuilder/: jpegBuilder.cpp  jpegBuilder.h
Serveur/Socket/RicochetSocketsServer/archive/logs/: Logs.cpp
Serveur/Socket/RicochetSocketsServer/archive/solver/: Solver.cpp
Serveur/Socket/SocketClientExample/: CMakeLists.txt  config.h  main.cpp
Serveur/Socket/SocketClientExample/sha256/: sha256.h
Serveur/Socket/StdSocketsClient/: CMakeLists.txt  configue.h  main.cpp
Serveur/Socket/StdSocketsClient/archive/: main.cpp
Serveur/Socket/StdSocketsClient/sha256/: sha256.cpp
Serveur/Socket/StdSocketsServ/: CMakeLists.txt  Serveur.cpp  Serveur.h  config.h  configue.h  devMode.h  main.cpp  socket.h
Serveur/Socket/StdSocketsServ/Client/: Client.cpp  Client.h
Serveur/Socket/StdSocketsServ/Logs/: Logs.cpp  Logs.h
Serveur/Socket/StdSocketsServ/MultipleTypePointer/: MultipleTypePointer.h
Serveur/Socket/StdSocketsServ/Server/: Server.cpp  Server.h
Serveur/Socket/StdSocketsServ/Socket/: Socket.cpp  Socket.h
Serveur/Socket/StdSocketsServ/archive/: Serveur.h  main.cpp
Serveur/Socket/StdSocketsServ/archive/boardBuilder/: boardBuilder.cpp  boardBuilder.h
Serveur/Socket/StdSocketsServ/archive/clients/: Client.h
Serveur/Socket/StdSocketsServ/archive/logs/: Logs.h
Serveur/Socket/StdSocketsServ/boardIsolation/: boardIsolation.cpp
Serveur/Socket/StdSocketsServ/clients/: Client.cpp  Client.h
Serveur/Socket/StdSocketsServ/logs/: Logs.cpp  Logs.h
Serveur/Socket/StdSocketsServ/solver/: Game.h  Solver.cpp  Solver.h
(+132 files in other folders)
